# Node-Editor

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: Blueprint.h  Executor.h  IExecutor.h  INode.h  IPin.h  Node_editor.h  Pin.h  Pin_link.h  Renderer.h  fwd.h  nodes_library.h  type_traits.h  types_library.h  utility.h  widgets.h
src/: Blueprint.cpp  Executor.cpp  Node_editor.cpp  Renderer.cpp  nodes_library.cpp  utility.cpp  widgets.cpp
